@@ -12,6 +12,7 @@ export const PAYMENT_METHOD_NAME_ALIPAY = 'stripe_alipay';
 export const PAYMENT_METHOD_NAME_KLARNA = 'stripe_klarna';
 export const PAYMENT_METHOD_NAME_AFFIRM = 'stripe_affirm';
 export const PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY = 'stripe_afterpay_clearpay';
+export const PAYMENT_METHOD_NAME_WECHAT_PAY = 'stripe_wechat_pay';
 
 export function getPaymentMethodsConstants() {
 	return {
@@ -29,6 +30,7 @@ export function getPaymentMethodsConstants() {
 		klarna: PAYMENT_METHOD_NAME_KLARNA,
 		affirm: PAYMENT_METHOD_NAME_AFFIRM,
 		afterpay_clearpay: PAYMENT_METHOD_NAME_AFTERPAY_CLEARPAY,
+		wechat_pay: PAYMENT_METHOD_NAME_WECHAT_PAY,
 	};
 }
 
